# gxmfun

./: CMakeLists.txt
include/: camera.h  math_utils.h  netlog.h
shader/: clear_f.cg  color_v.cg  cube_f.cg  cube_v.cg  disable_color_buffer_v.cg
source/: camera.c  main.c  math_utils.c  netlog.c
